Kconfig:   Add back IDE configuration.

--- a/arch/ia64/Kconfig
+++ b/arch/ia64/Kconfig
@@ -573,6 +573,8 @@ source "drivers/pnp/Kconfig"
 
 source "drivers/block/Kconfig"
 
+source "drivers/ide/Kconfig"
+
 source "drivers/ieee1394/Kconfig"
 
 source "drivers/message/i2o/Kconfig"
