--- a/arch/arm/common/Makefile
+++ b/arch/arm/common/Makefile
@@ -3,6 +3,7 @@
 #
 
 obj-y				+= platform.o
+obj-$(CONFIG_ARM_AMBA)		+= amba.o
 obj-$(CONFIG_ICST525)		+= icst525.o
 obj-$(CONFIG_SA1111)		+= sa1111.o sa1111-pcibuf.o sa1111-pcipool.o
 obj-$(CONFIG_PCI_HOST_PLX90X0)	+= plx90x0.o
