DRIVER: add drivers/base/Kconfig to all arch main Kconfig files.

--- a/arch/alpha/Kconfig
+++ b/arch/alpha/Kconfig
@@ -653,6 +653,8 @@ source "drivers/parport/Kconfig"
 
 endmenu
 
+source "drivers/base/Kconfig"
+
 source "drivers/mtd/Kconfig"
 
 source "drivers/pnp/Kconfig"
