--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -744,6 +744,8 @@ if ISA
 source "drivers/pnp/Kconfig"
 endif
 
+source "drivers/base/Kconfig"
+
 source "drivers/mtd/Kconfig"
 
 source "drivers/parport/Kconfig"
