--- a/arch/mips64/Kconfig
+++ b/arch/mips64/Kconfig
@@ -361,6 +361,8 @@ endmenu
 
 source "drivers/pci/Kconfig"
 
+source "drivers/base/Kconfig"
+
 source "drivers/mtd/Kconfig"
 
 source "drivers/parport/Kconfig"
