--- a/arch/sh/Kconfig
+++ b/arch/sh/Kconfig
@@ -767,6 +767,8 @@ source "fs/Kconfig.binfmt"
 
 endmenu
 
+source "drivers/base/Kconfig"
+
 source "drivers/mtd/Kconfig"
 
 source "drivers/parport/Kconfig"
