--- a/arch/um/Kconfig
+++ b/arch/um/Kconfig
@@ -171,6 +171,8 @@ endmenu
 
 source "init/Kconfig"
 
+source "drivers/base/Kconfig"
+
 source "arch/um/Kconfig_char"
 
 source "arch/um/Kconfig_block"
