--- a/arch/v850/Kconfig
+++ b/arch/v850/Kconfig
@@ -249,6 +249,8 @@ endmenu
 
 #############################################################################
 
+source "drivers/base/Kconfig"
+
 source drivers/mtd/Kconfig
 
 source drivers/parport/Kconfig
