--- a/arch/parisc/Kconfig
+++ b/arch/parisc/Kconfig
@@ -170,6 +170,8 @@ source "fs/Kconfig.binfmt"
 
 endmenu
 
+source "drivers/base/Kconfig"
+
 # source "drivers/mtd/Kconfig"
 
 source "drivers/parport/Kconfig"
