[netdrvr tulip] Kconfig help text fix
While there is a separate driver for 2104x tulips (CONFIG_DE2104X),
drivers/net/tulip/Kconfig states that CONFIG_TULIP also supports
2104x tulips. This is not the case since that support was removed
in December 2001. A user with an old tulip may thus be tricked into
configuring the wrong driver. (I was, on my PMac 4400.)

The patch below removes this misinformation from tulip's Kconfig.

--- a/drivers/net/tulip/Kconfig
+++ b/drivers/net/tulip/Kconfig
@@ -37,7 +37,7 @@ config TULIP
 	---help---
 	  This driver is developed for the SMC EtherPower series Ethernet
 	  cards and also works with cards based on the DECchip 
-	  21040/21041/21140 (Tulip series) chips.  Some LinkSys PCI cards are
+	  21140 (Tulip series) chips.  Some LinkSys PCI cards are
 	  of this type.  (If your card is NOT SMC EtherPower 10/100 PCI
 	  (smc9332dst), you can also try the driver for "Generic DECchip"
 	  cards, above.  However, most people with a network card of this type
