--- a/drivers/net/wireless/Kconfig
+++ b/drivers/net/wireless/Kconfig
@@ -296,6 +296,13 @@ config PCMCIA_ATMEL
 	 firmware package can be downloaded from
 	 http://www.thekelleys.org.uk/atmel/atmel_firmware.tar.gz
 
+config PCMCIA_WL3501
+      tristate "Planet WL3501 PCMCIA cards"
+      depends on NET_RADIO && EXPERIMENTAL && PCMCIA
+       ---help---
+         A driver for WL3501 PCMCIA 802.11 wireless cards made by Planet.
+         This driver supports standard Linux wireless extensions. 
+
 # yes, this works even when no drivers are selected
 config NET_WIRELESS
 	bool
