--- a/drivers/net/wireless/Makefile
+++ b/drivers/net/wireless/Makefile
@@ -23,4 +23,4 @@ obj-$(CONFIG_AIRO_CS)		+= airo_cs.o airo.o
 # 16-bit wireless PCMCIA client drivers
 obj-$(CONFIG_PCMCIA_RAYCS)	+= ray_cs.o
 obj-$(CONFIG_PCMCIA_ATMEL)      += atmel_cs.o atmel.o 
-
+obj-$(CONFIG_PCMCIA_WL3501)	+= wl3501_cs.o
