--- a/arch/m68k/Kconfig
+++ b/arch/m68k/Kconfig
@@ -1292,6 +1292,15 @@ config DEBUG_BUGVERBOSE
 	bool "Verbose BUG() reporting"
 	depends on DEBUG_KERNEL
 
+config DEBUG_INFO
+	bool "Compile the kernel with debug info"
+	depends on DEBUG_KERNEL
+	help
+          If you say Y here the resulting kernel image will include
+	  debugging info resulting in a larger kernel image.
+	  Say Y here only if you plan to use gdb to debug the kernel.
+	  If you don't debug the kernel, you can say N.
+	  
 endmenu
 
 source "security/Kconfig"
