--- a/arch/ia64/Makefile
+++ b/arch/ia64/Makefile
@@ -27,9 +27,8 @@ GCC_MINOR_VERSION=$(shell $(CC) -v 2>&1 | fgrep 'gcc version' | cut -f3 -d' ' | 
 
 GAS_STATUS=$(shell arch/ia64/scripts/check-gas $(CC) $(OBJDUMP))
 
-arch-cppflags	:= $(shell arch/ia64/scripts/toolchain-flags $(CC) $(LD) $(OBJDUMP))
-cflags-y	+= $(arch-cppflags)
-AFLAGS		+= $(arch-cppflags)
+CPPFLAGS	+= $(shell arch/ia64/scripts/toolchain-flags \
+				$(CC) $(LD) $(OBJDUMP))
 
 ifeq ($(GAS_STATUS),buggy)
 $(error Sorry, you need a newer version of the assember, one that is built from	\
