--- a/arch/mips/au1000/common/Makefile
+++ b/arch/mips/au1000/common/Makefile
@@ -5,14 +5,14 @@
 #
 # Makefile for the Alchemy Au1000 CPU, generic files.
 #
+# Note! Dependencies are done automagically by 'make dep', which also
+# removes any old dependencies. DON'T put your own dependencies here
+# unless it's something special (ie not a .c file).
+#
 
-obj-y := prom.o dbg_io.o int-handler.o irq.o puts.o time.o reset.o
+obj-y				+= prom.o int-handler.o dma.o irq.o puts.o \
+				   time.o reset.o clocks.o power.o
 
-obj-$(CONFIG_AU1000_UART) += serial.o             
-obj-$(CONFIG_REMOTE_DEBUG) += dbg_io.o             
-obj-$(CONFIG_BLK_DEV_INITRD) += ramdisk.o
-
-EXTRA_AFLAGS := $(CFLAGS)
-
-ramdisk.o: 
-	mkramobj ramdisk ramdisk.o
+obj-$(CONFIG_AU1X00_USB_DEVICE)	+= usbdev.o
+obj-$(CONFIG_KGDB)		+= dbg_io.o
+obj-$(CONFIG_RTC)		+= rtc.o
