[PATCH] DEC update
An update of the code for the DECstations.  This also adds 64-bit support
for the R4000 versions of DEC's good old workstations.

--- a/arch/mips/dec/boot/Makefile
+++ b/arch/mips/dec/boot/Makefile
@@ -3,8 +3,8 @@
 #
 
 netboot: all
-	mipsel-linux-ld -N -G 0 -T ld.ecoff ../../boot/zImage \
-		built-in.o ramdisk.img -o nbImage
+	$(LD) -N -G 0 -T ld.ecoff ../../boot/zImage \
+		dec_boot.o ramdisk.img -o nbImage
 
 obj-y	 := decstation.o
 
