--- a/arch/mips/dec/prom/Makefile
+++ b/arch/mips/dec/prom/Makefile
@@ -1,11 +1,11 @@
-# $Id: Makefile,v 1.1 1999/01/17 03:49:44 ralf Exp $
+#
 # Makefile for the DECstation prom monitor library routines
 # under Linux.
 #
 
-lib-y := init.o memory.o cmdline.o identify.o locore.o
+lib-y			+= init.o memory.o cmdline.o identify.o
+
+lib-$(CONFIG_MIPS32)	+= locore.o
+lib-$(CONFIG_MIPS64)	+= call_o32.o
 
 EXTRA_AFLAGS := $(CFLAGS)
-
-dep:
-	$(CPP) $(CPPFLAGS) -M *.c > .depend
