[PATCH] NEC DDB update
This updates the support for NEC's DDB series of evaluation boards.

--- a/arch/mips/ddb5xxx/ddb5074/Makefile
+++ b/arch/mips/ddb5xxx/ddb5074/Makefile
@@ -3,6 +3,6 @@
 # under Linux.
 #
 
-EXTRA_AFLAGS := $(CFLAGS)
+obj-y			+= setup.o irq.o int-handler.o nile4_pic.o time.o
 
-obj-y	:= setup.o irq.o time.o prom.o pci.o int-handler.o nile4.o
+EXTRA_AFLAGS := $(CFLAGS)
