[PATCH] ARC update
This updates the ARC firmware support code.  Also removes the 64-bit
variant of the code; the 64-bit kernel now uses the 32-bit code also.

--- a/arch/mips/arc/Makefile
+++ b/arch/mips/arc/Makefile
@@ -1,9 +1,10 @@
 #
-# Makefile for the SGI arcs prom monitor library routines
-# under Linux.
+# Makefile for the ARC prom monitor library routines under Linux.
 #
 
-lib-y		+= console.o init.o memory.o tree.o env.o cmdline.o misc.o \
-		   time.o file.o identify.o
+lib-y				+= cmdline.o env.o file.o identify.o init.o \
+				   misc.o time.o tree.o
 
-lib-$(CONFIG_ARC_CONSOLE)   += arc_con.o
+lib-$(CONFIG_ARC_MEMORY)	+= memory.o
+lib-$(CONFIG_ARC_CONSOLE)	+= arc_con.o
+lib-$(CONFIG_ARC_PROMLIB)	+= promlib.o
