--- a/drivers/i2c/busses/Kconfig
+++ b/drivers/i2c/busses/Kconfig
@@ -4,6 +4,22 @@
 
 menu "I2C Hardware Sensors Mainboard support"
 
+config I2C_ALI1535
+	tristate "  ALI 1535"
+	depends on I2C && PCI && EXPERIMENTAL
+	help
+	  If you say yes to this option, support will be included for the SMB
+	  Host controller on Acer Labs Inc. (ALI) M1535 South Bridges.  The SMB
+	  controller is part of the 7101 device, which is an ACPI-compliant
+	  Power Management Unit (PMU).
+
+	  This can also be built as a module.  If so, the module will be
+	  called i2c-ali1535.
+
+	  You will also need the latest user-space utilties: you can find them
+	  in the lm_sensors package, which you can download at
+	  http://www.lm-sensors.nu
+
 config I2C_ALI15X3
 	tristate "  ALI 15x3"
 	depends on I2C && PCI && EXPERIMENTAL
