MTD driver cleanups...
 - Fix AFS partitioning oops when no partitions are found
 - Add missing spin_unlock, optimise buffer writes in Intel NOR driver
 - Fix DiskOnChip Millennium Plus register OutputControl register definition
 - Fix DiskOnChip drivers to indicate correct ECC type
 - Fix map drivers to use ARRAY_SIZE instead of redefining it.
 - Make uCLinux map driver depend on !MMU
 - Fix NAND write verify problem on some chips
 - Other trivia from Rusty.

--- a/drivers/mtd/maps/Kconfig
+++ b/drivers/mtd/maps/Kconfig
@@ -1,5 +1,5 @@
 # drivers/mtd/maps/Kconfig
-# $Id: Kconfig,v 1.11 2003/05/28 15:16:56 dwmw2 Exp $
+# $Id: Kconfig,v 1.12 2003/06/23 07:38:11 dwmw2 Exp $
 
 menu "Mapping drivers for chip access"
 	depends on MTD!=n
@@ -476,7 +476,7 @@ config MTD_PCMCIA
 
 config MTD_UCLINUX
 	tristate "Generic uClinux RAM/ROM filesystem support"
-	depends on MTD_PARTITIONS
+	depends on MTD_PARTITIONS && !MMU
 	help
 	  Map driver to support image based filesystems for uClinux.
 
