[SERIAL] Missing Kconfig dependencies
If one turns off SERIAL_8250, these items shouldn't be selectable.
Also gets the indentation right in <BACKTICK>make oldconfig'.

--- a/drivers/serial/Kconfig
+++ b/drivers/serial/Kconfig
@@ -80,14 +80,14 @@ config SERIAL_8250_CS
 config SERIAL_8250_ACPI
 	bool "8250/16550 device discovery via ACPI namespace"
 	default y if IA64
-	depends on ACPI_BUS
+	depends on ACPI_BUS && SERIAL_8250
 	---help---
 	  If you wish to enable serial port discovery via the ACPI
 	  namespace, say Y here.  If unsure, say N.
 
 config SERIAL_8250_HCDP
 	bool "8250/16550 device discovery support via EFI HCDP table"
-	depends on IA64
+	depends on IA64 && SERIAL_8250
 	---help---
 	  If you wish to make the serial console port described by the EFI
 	  HCDP table available for use as serial console or general
