[CPUFREQ] speedstep cleanups. From Dominik Brodowski.
- separate functions which might be useful for speedstep-piix4,
  speedstep-via or speedstep-bios into a new speedstep-lib.c.
- clean up speedstep-ich as it will only be used for ICH-based chipsets
  in future.
- remove now-obsolete speedstep_coppermine parameter

--- a/arch/i386/kernel/cpu/cpufreq/Kconfig
+++ b/arch/i386/kernel/cpu/cpufreq/Kconfig
@@ -123,6 +123,11 @@ config X86_SPEEDSTEP_CENTRINO
 	  
 	  If in doubt, say N.
 
+config X86_SPEEDSTEP_LIB
+       tristate
+       depends on X86_SPEEDSTEP_ICH
+       default X86_SPEEDSTEP_ICH
+
 config X86_P4_CLOCKMOD
 	tristate "Intel Pentium 4 clock modulation"
 	depends on CPU_FREQ_TABLE
