[PATCH] Update IEEE1394 (r972)
 IEEE1394 : Kbuildify oui2c.
 ALL      : C construct cleanups, macro namespace cleanups.
 ETH1394  : Limited multicast support. Minor fixes for IPv4 interop.
 ETH1394  : Add ethtool support.

--- a/drivers/ieee1394/Makefile
+++ b/drivers/ieee1394/Makefile
@@ -18,6 +18,9 @@ obj-$(CONFIG_IEEE1394_CMP) += cmp.o
 
 clean-files := oui.c
 
+quiet_cmd_oui2c = OUI2C   $@
+      cmd_oui2c = $(CONFIG_SHELL) $(obj)/oui2c.sh < $(obj)/oui.db > $@
+
 $(obj)/oui.o: $(obj)/oui.c
 $(obj)/oui.c: $(obj)/oui.db $(obj)/oui2c.sh
-	$(CONFIG_SHELL) $(obj)/oui2c.sh < $(obj)/oui.db > $@
+	$(call if_changed,oui2c)
